# AgentWeaver-CLI

./: .eslintignore  .eslintrc.json  .npmignore  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PROGRESS_SUMMARY.md  README.md  REFACTORING_GUIDE.md  TECH_AGNOSTIC_GUIDE.md  TEMPLATES.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  prerelease.yml  publish.yml
docs/: ARCHITECTURE.md  CLI_REFERENCE.md  GETTING_STARTED.md  PRD-AgentWeaver-CLI.md
src/cli/: index.ts
src/cli/commands/: init.ts  regenerate-docs.ts  templates.ts  validate.ts
src/lib/: agent-installer.ts  config-generator.ts  enhanced-tech-detector.ts  skills-installer.ts  stack-installer.ts  stack-template.ts  tech-detector.ts  template-pack-validator.ts  template-pack.ts  template-resolver.ts
src/lib/detectors/: base-detector.ts  csharp-detector.ts  go-detector.ts  index.ts  java-detector.ts  php-detector.ts  ruby-detector.ts  rust-detector.ts
src/templates/: CLAUDE.md.hbs  WORKFLOWS.md
src/templates/agents/: account-exec.md  backend-dev.md  content-writer.md  customer-success.md  debugger.md  devops.md  docs-writer.md  frontend-dev.md  growth-marketer.md  marketing-manager.md  product-marketer.md  product-owner.md  qa-tester.md  sales-engineer.md  sales-manager.md  scrum-master.md  sdr.md  seo-specialist.md  social-media.md  tech-lead.md  ui-ux-dev.md
src/templates/skills/api-authentication/: SKILL.md
src/templates/skills/api-error-handling/: SKILL.md
src/templates/skills/api-pagination/: SKILL.md
src/templates/skills/api-rate-limiting/: SKILL.md
src/templates/skills/api-versioning/: SKILL.md
src/templates/skills/clean-architecture/: SKILL.md
src/templates/skills/clean-code/: SKILL.md
src/templates/skills/component-generation/: skill.md
src/templates/skills/database-optimization/: SKILL.md
src/templates/skills/db-indexes/: SKILL.md
src/templates/skills/db-migrations/: SKILL.md
src/templates/skills/db-transactions/: SKILL.md
src/templates/stacks/fastapi-backend/: .gitignore  .mypy.ini  .ruff.toml  Dockerfile  README.md  alembic.ini  docker-compose.yml  manifest.yml  pyproject.toml
src/templates/stacks/fastapi-backend/docs/: structure.md
src/templates/stacks/nextjs-fastapi-monorepo/: .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  manifest.yml  package.json  pyproject.toml
src/templates/stacks/nextjs-fastapi-monorepo/.github/workflows/: ci.yml
src/templates/stacks/nextjs-fastapi-monorepo/apps/backend/: .env.example  alembic.ini  pyproject.toml
src/templates/stacks/nextjs-fastapi-monorepo/apps/frontend/: .env.example  next.config.ts  package.json
src/templates/stacks/nextjs-fastapi-monorepo/docs/: structure.md
src/utils/: file-operations.ts  yaml-parser.ts
tests/: cli-integration.test.ts  globals-test.test.ts  stack-templates.test.ts  tech-stack-markdown.test.ts  template-installation.test.ts  template-pack-validation.test.ts
(+95 files in other folders)
