[project]
name = "{{projectName}}"
version = "0.1.0"
description = "Next.js + FastAPI Monorepo"
requires-python = ">=3.11"
readme = "README.md"

[tool.uv]
dev-dependencies = []

[tool.uv.workspace]
members = ["apps/backend"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["apps/backend/tests"]
python_files = "test_*.py"
python_functions = "test_*"
